--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Shipping module for Etsy FEC project",
   "main": "app.js",
   "scripts": {
-    "seed": "node ./seed/shipping-seeder.js"
+    "seed": "node ./seed/shipping-seeder.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
