--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Shipping module for Etsy FEC project",
   "main": "app.js",
   "scripts": {
+    "test": "jest",
     "seed": "node ./seed/shipping-seeder.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
@@ -25,6 +26,7 @@
     "node": "^14.7.0"
   },
   "devDependencies": {
+    "jest": "^26.4.0",
     "nodemon": "^2.0.4"
   }
 }
