Add scrap folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Ignore Mac System Files
 .DS_store
 
-#Ignore node_modules
+#Ignore folders
 node_modules
+scrap
 
 #Ignore environment variables (API keys)
 .env
