--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "seed": "node ./seed/shipping-seeder.js",
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack --config webpack.config.js",
     "test": "jest",
     "seed": "node ./seed/shipping-seeder.js",
     "start": "node app.js",
