--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "seed": "node ./seed/shipping-seeder.js",
-    "start": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --open --config webpack.config.js",
     "test": "jest",
     "dev-node": "node app.js",
     "dev": "nodemon app.js"
@@ -21,16 +21,19 @@
   },
   "homepage": "https://github.com/FEC-Linka/shipping#readme",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.28",
     "node": "^14.7.0"
   },
   "devDependencies": {
+    "chokidar": "^3.4.2",
+    "fsevents": "^2.1.3",
     "jest": "^26.4.0",
     "nodemon": "^2.0.4",
+    "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0"
   }
 }
