--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "seed": "node ./seed/shipping-seeder.js",
     "start": "webpack-dev-server --open --config webpack.config.js",
     "test": "jest",
-    "dev-node": "node app.js",
-    "dev": "nodemon app.js"
+    "dev-server": "nodemon app.js"
   },
   "repository": {
     "type": "git",
