--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev-client": "webpack-dev-server --open --config webpack.config.js",
     "dev-server": "nodemon app.js",
     "test": "jest"
-
   },
   "repository": {
     "type": "git",
@@ -29,6 +28,10 @@
     "node": "^14.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "chokidar": "^3.4.2",
     "fsevents": "^2.1.3",
     "jest": "^26.4.0",
