--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "seed": "node ./seed/shipping-seeder.js",
-    "dev-client": "webpack-dev-server --open --config webpack.config.js",
+    "dev-client": "webpack --config webpack.config.js --watch",
     "dev-server": "nodemon server.js",
     "test": "jest"
   },
@@ -25,18 +25,17 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.28",
-    "node": "^14.7.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "chokidar": "^3.4.2",
-    "fsevents": "^2.1.3",
     "jest": "^26.4.0",
     "nodemon": "^2.0.4",
     "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   }
 }
