Add start command for node server

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "node ./seed/shipping-seeder.js",
     "dev-client": "webpack --config webpack.config.js --watch",
     "dev-server": "nodemon server.js",
+    "start": "node server.js",
     "test": "jest"
   },
   "repository": {
