--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "seed": "node ./seed/shipping-seeder.js",
     "dev-client": "webpack --config webpack.config.js --watch",
     "dev-server": "nodemon server.js",
-    "start": "node server.js",
+    "start": "pm2 start server.js",
     "test": "jest"
   },
   "repository": {
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.28",
+    "pm2": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
