--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.28",
     "pm2": "^4.4.1",
     "react": "^16.13.1",
