--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mongoose": "^5.9.28",
     "pm2": "^4.4.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
