--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev-client": "webpack --config webpack.config.js --watch",
     "dev-server": "nodemon server.js",
     "start": "pm2 start server.js",
+    "stop": "pm2 stop server.js",
     "build": "webpack --config webpack.config.js",
     "test": "jest"
   },
@@ -36,7 +37,6 @@
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
-    "pm2": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.2.0"
