--- a/package.json
+++ b/package.json
@@ -30,16 +30,22 @@
   },
   "homepage": "https://github.com/FEC-Linka/shipping#readme",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "moment": "^2.27.0",
+    "faker": "^5.1.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.28",
+    "ndjson": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.2.0"
+    "split": "^1.0.1",
+    "stream-json": "^1.7.1",
+    "styled-components": "^5.2.0",
+    "through2": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
