--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "scripts": {
     "seed": "node ./seed/shipping-seeder.js",
     "dev-client": "webpack --config webpack.config.js --watch",
-    "dev-server": "nodemon server.js",
-    "start": "pm2 start server.js",
-    "stop": "pm2 stop server.js",
+    "mongo-server": "nodemon server.js",
+    "couchbase-server": "nodemon couchbaseDB.js",
     "build": "webpack --config webpack.config.js",
     "test": "jest"
   },
@@ -34,11 +33,8 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-
     "couchbase": "^3.0.6",
-
     "csv-write-stream": "^2.0.0",
-
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
@@ -46,11 +42,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.9.28",
     "ndjson": "^2.0.0",
-
     "ottoman": "^2.0.0-alpha.2",
-
     "pg": "^8.4.1",
-
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "split": "^1.0.1",
