--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,14 @@
 
 #Ignore folders
 node_modules
-scrap
-client/dist
+sdc-vectrex-chris-shipping-dev.js
+sdc-vectrex-chris-shipping-prod.js
 
 #Ignore environment variables (API keys)
 .env
 
 #Ignore ssh keys
-FEC.pem
-
-mockData3.json
+mockData1e6.json
 mockData5.csv
 seed/postgresSchema.js
 routes/couchdbRoutes.js
