--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build-dev": "webpack --config webpack.dev.js --watch",
     "build-prod": "webpack --config webpack.prod.js",
     "start": "nodemon server.js",
+    "pm2": "pm2 start server.js --name shipping-app",
     "couchbase-server": "nodemon couchbaseDB.js",
     "test": "jest"
   },
@@ -31,7 +32,6 @@
   },
   "homepage": "https://github.com/FEC-Linka/shipping#readme",
   "dependencies": {
-    "JSONStream": "^1.3.5",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "JSONStream": "^1.3.5",
     "k6": "0.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
@@ -58,6 +59,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "dotenv-webpack": "^5.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.7.0",
