Implement Server Side Rendering   -Transpile entirety of client code to be served initially    via wildcard route '**'   -Send html string template with embedded transpiled react app   -Upgrade webpack to v5   -Adjust env variables in both webpack dev and prod configs

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,7 @@
 node_modules
 npm-debug.log
+functions/public/sdc-vectrex-chris-shipping-prod.js.LICENSE.txt
+functions/public/sdc-vectrex-chris-shipping-prod.js.map
 .env
 sdc-vectrex-chris-shipping-dev.js
 routes/couchdbRoutes.js
