--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,7 @@
     "pm2": "pm2 start server/server.js --name shipping-app",
     "couchbase-server": "nodemon couchbaseDB.js",
     "test": "jest",
-    "transpile": "babel ./src/server -d functions/src/server && babel ./src/client -d functions/src/client"
+    "transpile": "babel ./src/server -d functions/ && node_modules/.bin/babel ./src/client -d functions/src"
   },
   "repository": {
     "type": "git",
@@ -53,7 +53,6 @@
     "react-dom": "^16.13.1",
     "styled-components": "^5.2.0",
     "through2": "^4.0.2",
-    "webpack": "^5.5.0",
     "webpack-merge": "^5.1.1"
   },
   "devDependencies": {
@@ -74,6 +73,7 @@
     "jest": "^26.4.0",
     "jest-enzyme": "^7.1.2",
     "nodemon": "^2.0.6",
-    "webpack-cli": "^4.2.0"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
